# k1921vk035-pactest

./: .gitignore  Cargo.toml  K1921VKx.yaml  memory.x  readme.md
.cargo/: config.toml
src/: main.rs
